--- a/my-menu-app/package.json
+++ b/my-menu-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-menu-app",
-  "homepage": "https://Barbieri1981.github.io/react-menu-deploy/",
+  "homepage": "https://Barbieri1981.github.io/react-menu-deploy/my-menu-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -29,8 +29,8 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "gh-pages": "^5.0.0"
   }
 }
